1.2.0 ( rXXXX )
---------------

1.1.1 ( rXXXX )
---------------

Added the Ivy and Maven Ant Tasks jars to the binary distribution.

Amend the Maven target set to add explicit specification of the source and test directories.  This applies
the Groovy joint compiler to everything in that directory, i.e. the Maven 2 split of language specific
directories is not applied.

Amended the Execute tool adding multi-threading of the process output streams to avoid blocking due to
overful buffers.  cf. GANT-22.  Altered return type of methods so as to return the return code of the
executed process. cf. GANT-23.

Add a new tool AntFile for reading an Ant XML file and presenting all the targets as targets in a Gant file.

Added a -L|--lib <directory-path> options in the same style as Ant's at the request of Adam DesJardin.
cf. GANT-24.

Added $HOME/.gant/lib as a repository of jar files as well as $HOME/.ant/lib.

1.1.0 ( r8964 )
---------------

Added metadata to the Maven target set.

Updated the Ivy example a bit.  Switched to Ivy 2.0.0-beta-1.

Added a Gant Ant Task.  (For supporting continuous integration systems that insist on using Ant.)
Unfortunately, there is a problem with loading the Groovyc task in an Gant script executed from an Ant
script -- see GANT-19.   The Gant Ant task is written in Java which leads to the build requiring the use of
the joint Groovy compiler.  This means it is not possible to build Gant using Groovy 1.0.

Added creating Cobertura reports via the coberturaTest target in the Gantfile.

Amended some of the error handling, especially target definition.

Added constructors to allow the Gant script to be a parameter.  This allows programs (including the tests)
not to have to use a command line approach to starting Gant.  Many of the tests refactored.

Added extra options in the LaTeX tool execution to avoid any interactive mode of LaTeX.


1.0.2 ( r8867 )
---------------

Fixed bug in parameter types of message Closure in gant.Gant.
