@@ -66,8 +66,12 @@
 
   <target name="compile" depends="-initialize" description="Compile everything needed for a Gant installation.">
     <mkdir dir="${buildClassesDirectory}"/>
-    <groovyc srcdir="${sourceDirectory}" destdir="${buildClassesDirectory}" classpathref="compileJarSet">
-      <javac source="1.4" target="1.4" debug="on"/>
+    <groovyc srcdir="${sourceDirectory}" destdir="${buildClassesDirectory}">
+      <classpath>
+        <pathelement location="${buildClassesDirectory}"/>
+        <path refid="compileJarSet"/>
+      </classpath>
+      <javac source="1.5" target="1.5" debug="on"/>
     </groovyc>
   </target>
 
@@ -79,7 +83,7 @@
         <fileset dir="${installationHome}/lib" includes="junit*.jar"/>
         <path refid="compileJarSet"/>
       </classpath>
-      <javac source="1.4" target="1.4" debug="on"/>
+      <javac source="1.5" target="1.5" debug="on"/>
     </groovyc>
   </target>
 
