@@ -35,7 +35,7 @@ includeTargets ** gant.targets.Maven * [
                                                                [ groupId : 'org.codehaus.groovy' , artifactId : 'groovy-all' , version : '1.5.4' ] ,
                                                                [  groupId : 'commons-cli' , artifactId : 'commons-cli' , version : '1.0' ]
                                                                ] ,
-                                        javaCompileProperties : [ source : '1.4' , target : '1.4' , debug : 'true' ] ,
+                                        javaCompileProperties : [ source : '1.5' , target : '1.5' , debug : 'true' ] ,
                                         deployURL : 'https://dav.codehaus.org/repository/gant' ,
                                         deploySnapshotURL : 'https://dav.codehaus.org/snapshots.repository/gant' ,
                                         manifest : [
