@@ -132,6 +132,7 @@
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
       <version>1.5.4</version>
+      <!--version>1.6-beta-1-SNAPSHOT</version-->
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -178,7 +179,7 @@
             <configuration>
               <rules>
                 <requireJavaVersion>
-                  <version>[1.4,)</version>
+                  <version>[1.5,)</version>
                 </requireJavaVersion>
                 <requireMavenVersion>
                   <version>[2.0.5,)</version>
@@ -192,8 +193,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.4</source>
-          <target>1.4</target>
+          <source>1.5</source>
+          <target>1.5</target>
           <debug>on</debug>
         </configuration>
       </plugin>
@@ -240,7 +241,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <source>1.4</source>
+          <source>1.5</source>
         </configuration>
       </plugin>
        <plugin>
@@ -285,7 +286,7 @@
           <version>true</version>
           <use>true</use>
           <locale>en_GB</locale>
-          <source>1.4</source>
+          <source>1.5</source>
           <bottom>Copyright &copy; 2006&ndash;2007 Russel Winder.  All rights reserved.</bottom>
           <charset>UTF-8</charset>
           <breakIterator>yes</breakIterator>
